<resources>
    <string name="app_name">Scheduler</string>
    <string name="app_icon_description">Scheduler Icon</string>
    <string name="app_description">Record your life</string>
    <string name="schedule_header">Schedule Details</string>
    <string name="schedule_title_placeholder">Schedule Title</string>
    <string name="schedule_date_placeholder">Schedule Date</string>
    <string name="schedule_time_placeholder">Schedule Time</string>
    <string name="schedule_description_placeholder">Schedule Description</string>
    <string name="schedule_isDone_label">Schedule completed!</string>
    <string name="add_schedule_header">Add new schedule…</string>
    <string name="add_schedule_title_label">Schedule Title</string>
    <string name="add_schedule_title_hint">What is your schedule?</string>
    <string name="add_schedule_date_label">Schedule Date</string>
    <string name="add_schedule_pick_date_button">Pick a date</string>
    <string name="add_schedule_no_date">No date chosen.</string>
    <string name="add_schedule_time_label">Schedule Time</string>
    <string name="add_schedule_pick_time_button">Pick a time</string>
    <string name="add_schedule_no_time">No time chosen.</string>
    <string name="add_schedule_description_label">Description</string>
    <string name="add_schedule_description_hint">Describe more about your task!</string>
    <string name="add_schedule_add_photo_label">Schedule Photo</string>
    <string name="add_schedule_add_photo_button">Add a Photo</string>
    <string name="add_schedule_no_photo">No photo is added.</string>
    <string name="add_schedule_confirm_add_button">Add Schedule</string>
    <string name="list_item_schedule_title_placeholder">Schedule Title</string>
    <string name="list_item_schedule_date_placeholder">Schedule Date</string>
    <string name="schedule_jump_to_first_button">Jump to first</string>
    <string name="schedule_jump_to_last_button">Jump to last</string>
    <string name="new_schedule">New Schedule</string>
    <string name="schedule_no_description">No description added.</string>
    <string name="date_picker_title">Pick a date: </string>
    <string name="date_format">%1$d/%2$d/%3$d</string>
    <string name="time_picker_title">Pick a time: </string>
    <string name="time_format">%1$s %2$s</string>
    <string name="delete_schedule">Delete Schedule</string>
    <string name="share_schedule">Share Schedule</string>
    <string name="simple_schedule">%1$s on %2$s %3$s. \nDescription: %4$s \n%5$s</string>
    <string name="simple_schedule_subject">Simple Schedule</string>
    <string name="share_simple_schedule">Share your schedule via</string>
    <string name="schedule_done">This schedule is done.</string>
    <string name="schedule_not_done">This schedule is not done yet.</string>
    <string name="twelve_hour_am">AM</string>
    <string name="twelve_hour_pm">PM</string>
    <string name="schedule_photo_context_description">Schedule Photo</string>
    <string name="camera_disabled">Photo cannot be taken.</string>
    <string name="add_schedule_photo_successfully_taken">Photo has been taken.</string>
    <string name="date_not_picked_toast">Please pick a date for your schedule.</string>
    <string name="time_not_picked_toast">Please pick a time for your schedule.</string>

</resources>
